--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -17,6 +17,9 @@ $theme-color-interval: 10% !default;
 $light: #f5f7fb !default;
 $dark: #354052 !default;
 
+$dark-darken: darken($dark, 3%) !default;
+$dark-lighten: lighten($dark, 3%) !default;
+
 $light-black: rgba($dark, .24) !default;
 $light-mix: rgba(mix($light, $dark, 64%), .24) !default;
 $light-white: rgba($light, .24) !default;
@@ -58,8 +61,6 @@ $border-color: rgba($text-muted, .24) !default;
 
 $hover-bg: $light !default;
 $active-bg: rgba($blue, .06) !default;
-
-$dark-body-bg: darken($dark, 3%) !default;
 
 $primary: $blue !default;
 $secondary: $text-muted !default;
@@ -460,3 +461,4 @@ $enable-ghost-buttons: true !default;
 $enable-extra-colors: true !default;
 $enable-gradients: false !default;
 $enable-navbar-vertical: true !default;
+$enable-dark-mode: true !default;
