--- a/scss/layout/_mainnav.scss
+++ b/scss/layout/_mainnav.scss
@@ -98,7 +98,6 @@
   min-height: auto;
   align-items: start;
   overflow: auto;
-  box-shadow: inset -1px 0 0 0 $border-color;
 
   > [class*="container"] {
     flex-direction: column;
@@ -184,7 +183,6 @@
   &.navbar-right {
     left: auto;
     right: 0;
-    box-shadow: inset 1px 0 0 0 $border-color;
 
     ~ .navbar,
     ~ .content {
@@ -341,6 +339,8 @@ Navbar brand
 Navbar colors
  */
 .navbar {
+  box-shadow: 0 0 0 1px $border-color;
+
   .navbar-nav {
     .nav-link {
       color: inherit;
@@ -369,14 +369,13 @@ Navbar colors
 
 .navbar-light {
   background: $white;
-  box-shadow: inset 0 -1px 0 0 $border-color;
   @include scrollbar;
 }
 
 .navbar-dark {
   background: $sidenav-dark-bg;
   color: $sidenav-dark-color;
-  box-shadow: inset 0 -1px 0 0 $border-color;
+  box-shadow: 0 0 0 1px $dark-darken;
   @include scrollbar(true);
 
   .text-muted {
@@ -390,7 +389,7 @@ Navbar colors
 
   .form-control {
     border-color: transparent;
-    background: $min-white;
+    background: $dark-lighten;
     color: $white;
   }
 }
