--- a/scss/mixins/_mixins.scss
+++ b/scss/mixins/_mixins.scss
@@ -45,3 +45,19 @@
 @mixin autodark-image {
   filter: brightness(0) invert(1);
 }
+
+@mixin dark-mode {
+  @if $enable-dark-mode {
+    @media not print {
+      .theme-dark & {
+        @content
+      }
+    }
+
+    @media not print and (prefers-color-scheme: dark) {
+      .theme-dark-auto & {
+        @content
+      }
+    }
+  }
+}
